# azure-storage-queue-monitor

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
infra/: main.tf  output.tf  variable.tf
infra/monitor/: main.tf  variables.tf
infra/observability/: main.tf  output.tf  variable.tf
infra/observability/workbooks-template/: workbook.json
scripts/: azurite_setup.py  send_message.py  send_messages.py
src/: Dockerfile  function_app.py  host.json  local.settings.sample.json  requirements.txt  settings.py
src/monitor/: metric_setup.py  monitor_settings.py  monitoring_job.py
src/routes/: config.py  health.py
